-- Core Tables Schema
-- This schema represents the fundamental data structures for the application

-- Documents table for storing document content and embeddings
CREATE TABLE documents (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    content text,
    metadata jsonb,
    embedding vector(1536),
    api_data jsonb
);

-- Events table for storing event information
CREATE TABLE events (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar,
    location varchar,
    date date,
    latitude real,
    longitude real,
    description text,
    photos jsonb,
    api_data jsonb
);

-- Organizations table
CREATE TABLE organizations (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar,
    specialization varchar,
    description text,
    photo text,
    image text,
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Personnel/Key Figures table
CREATE TABLE key_figures (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar,
    bio text,
    role varchar,
    facebook varchar,
    twitter varchar,
    website varchar,
    instagram varchar,
    rank integer,
    photo jsonb,
    credibility integer,
    popularity integer,
    authority integer,
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Topics table
CREATE TABLE topics (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar,
    summary text,
    photo text,
    photos jsonb,
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Testimonies table
CREATE TABLE testimonies (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    claim text,
    summary text,
    documentation jsonb,
    event_id integer REFERENCES events(id),
    date timestamp without time zone,
    witness_id integer REFERENCES key_figures(id),
    organization_id integer REFERENCES organizations(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Sightings table
CREATE TABLE sightings (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date timestamp with time zone,
    description text,
    media_link text,
    city varchar,
    state varchar,
    country varchar,
    shape varchar,
    duration_seconds varchar,
    duration_hours_min varchar,
    comments text,
    date_posted date,
    latitude numeric,
    longitude numeric,
    api_data jsonb
);

-- Artifacts table
CREATE TABLE artifacts (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name text NOT NULL,
    description text,
    photos text[],
    date text,
    source text,
    origin text,
    images text[],
    api_data jsonb
);

-- Users table
CREATE TABLE users (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email text NOT NULL,
    name text NOT NULL,
    photo text,
    profile_image_url text,
    external_id text,
    api_data jsonb
);

-- Junction Tables

-- Organization Members
CREATE TABLE organization_members (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_id integer REFERENCES key_figures(id),
    organization_id integer REFERENCES organizations(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Topic Subject Matter Experts
CREATE TABLE topic_subject_matter_experts (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    topic_id integer REFERENCES topics(id),
    subject_matter_expert_id integer REFERENCES key_figures(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Event Subject Matter Experts
CREATE TABLE event_subject_matter_experts (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id integer REFERENCES events(id),
    subject_matter_expert_id integer REFERENCES key_figures(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Topics Testimonies
CREATE TABLE topics_testimonies (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    topic_id integer REFERENCES topics(id),
    testimony_id integer REFERENCES testimonies(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- Event Topic Subject Matter Experts
CREATE TABLE event_topic_subject_matter_experts (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id integer REFERENCES events(id),
    topic_id integer REFERENCES topics(id),
    subject_matter_expert_id integer REFERENCES key_figures(id),
    created_at timestamp without time zone,
    updated_at timestamp without time zone,
    version integer,
    api_data jsonb
);

-- User Related Tables

-- User Theories
CREATE TABLE user_theories (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    title text NOT NULL,
    content text,
    synopsis text,
    diagrams text[],
    description text
);

-- User Saved Events
CREATE TABLE user_saved_events (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    event_id integer REFERENCES events(id),
    note text,
    note_title text,
    api_data jsonb
);

-- User Saved Topics
CREATE TABLE user_saved_topics (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    topic_id integer REFERENCES topics(id),
    note text,
    note_title text,
    api_data jsonb
);

-- User Saved Documents
CREATE TABLE user_saved_documents (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    document_id integer REFERENCES documents(id),
    note text,
    note_title text,
    api_data jsonb
);

-- User Saved Testimonies
CREATE TABLE user_saved_testimonies (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    testimony_id integer REFERENCES testimonies(id),
    note text,
    note_title text,
    api_data jsonb
);

-- User Saved Organizations
CREATE TABLE user_saved_organizations (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id integer REFERENCES users(id),
    organization_id integer REFERENCES organizations(id),
    note text,
    note_title text,
    api_data jsonb
);

-- Mind Maps
CREATE TABLE mindmaps (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    json json DEFAULT '{}'::json,
    embedding vector(1536),
    user_id integer REFERENCES users(id),
    file text,
    api_data jsonb
);